0.34
====

20061119: Changed quote plugin dialogs to all appear in one dialog. You can have a separate dialog window for each quote
          plugin if you like and leave them open, minimized whatever. This helps with eventually having real-time quotes
          running in the background with no blocking to the main app.

20061120: Applied patch #1600028 - update install notes for Mac symlink db4.

20061120: Added new UTIL functions Higher and Lower. These functions return either the higher or lower value of 2
          arrays or an array and constant.

20061123: Removed QtstalkerFormat quote plugin. It's redundant now. The chart panel can dump files,
          CSV can import them and the berkeley db suite has utilities for dumping and rebuilding 
          files.

20061127: Fixed LOWPASS bug that returned the input instead of the ouput.

20061130: Added Charts or Groups option to the scanner dialog. If charts is chosen, the file selector will
          allow only chart directories to be navigated. If Groups is chosen, then only group directories
          can be navigated.

20061201: Fixed bug in backtster that sefaults using < 0.33 CUS syntax.

20061203: Added new indicator plugin ExScript. User can run external scripts that can pass data back to ExScript
          to plot.

20061204: Fixed bug that did not save/restore chart pixelspaces.

20061205: Added options to send bar data through stdin to the ExScript plugin.

20061205: Applied patch #1609188 - modified util.html. Thanks to Lothar for the patch.

20061205: Added new UTIL function INRANGE. Returns TRUE if value is => min and <= max. Otherwise returns FALSE.

20061206: Changed the minimum bar spacing to 2.

20061207: Changed the info panel window to list date,time,open,high,low,close,volume,oi first.

20061207: Added edit chart option to the chart context menu.

20061207: Keyboard delete key now deletes charts from the chart/group panels.
